<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="373dp"
        android:layout_height="357dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/thenounproject"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="120dp"
                android:scaleX="1.4"
                android:scaleY="1.4"
                android:translationX="130dp"
                android:translationY="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pillar"
                app:tint="@color/seed"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="10dp"
                android:text="@string/rules"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="372dp"
                android:layout_height="277dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/there_are_20_questions_for_1_point_each"
                    android:textSize="31sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/take_the_quiz"
                    android:textSize="31sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/as_many_times"
                    android:textSize="31sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/as_you_want_to"
                    android:textSize="31sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/join_the_ranks"
                    android:textSize="31sp" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="377dp"
        android:layout_height="66dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:maxLength="15"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textAlignment="viewStart"
            android:textSize="34sp"
            android:autofillHints="" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/playButton2"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_marginBottom="60dp"
        android:text="@string/begin"
        android:textAlignment="center"
        android:textSize="24sp"
        app:icon="@android:drawable/ic_media_play"
        app:iconSize="30dp"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.568" />

</androidx.constraintlayout.widget.ConstraintLayout>