<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="379dp"
        android:layout_height="259dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/thenounproject"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="1.4"
            android:scaleY="1.4"
            android:translationX="130dp"
            android:translationY="50dp"
            app:srcCompat="@drawable/thenounproject"
            app:tint="@color/seed"
            android:importantForAccessibility="no"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:text="@string/history_quiz"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="96sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_history_quiz"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/playButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_marginBottom="144dp"
        android:text="@string/play"
        android:textAlignment="center"
        android:textSize="24sp"
        app:icon="@android:drawable/ic_media_play"
        app:iconSize="30dp"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/leaderboardButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="56dp"
        android:text="@string/leaderboard"
        android:textAlignment="center"
        android:textSize="20sp"
        app:icon="@android:drawable/ic_menu_myplaces"
        app:iconSize="30dp"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />


</androidx.constraintlayout.widget.ConstraintLayout>